src/test/fail/missing_parenth.ly
#[
SyntaxError: Unexpected token 'end of file'.
Where: File "test/fail/missing_parenth.ly" at line 6
]#

var a: integer = 0   a = ((a)
